@@ -13,24 +13,41 @@ import javafx.scene.control.TreeItem;
 import models.Ip;
 import models.MessageParser;
 import org.apache.commons.lang.exception.ExceptionUtils;
-import org.apache.http.client.ClientProtocolException;
-import org.apache.http.client.config.RequestConfig;
-import org.apache.http.client.methods.CloseableHttpResponse;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.client.methods.HttpRequestBase;
-import org.apache.http.impl.client.HttpClients;
-import org.apache.http.util.EntityUtils;
+import org.apache.hc.client5.http.ClientProtocolException;
+import org.apache.hc.client5.http.classic.methods.HttpGet;
+import org.apache.hc.client5.http.classic.methods.HttpPost;
+import org.apache.hc.client5.http.classic.methods.HttpUriRequestBase;
+import org.apache.hc.client5.http.config.RequestConfig;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpResponse;
+import org.apache.hc.client5.http.impl.classic.HttpClients;
+import org.apache.hc.client5.http.impl.io.PoolingHttpClientConnectionManager;
+import org.apache.hc.client5.http.impl.io.PoolingHttpClientConnectionManagerBuilder;
+import org.apache.hc.client5.http.impl.routing.DefaultRoutePlanner;
+import org.apache.hc.client5.http.ssl.DefaultClientTlsStrategy;
+import org.apache.hc.client5.http.ssl.DefaultHostnameVerifier;
+import org.apache.hc.client5.http.ssl.SSLConnectionSocketFactory;
+import org.apache.hc.client5.http.ssl.SSLConnectionSocketFactoryBuilder;
+import org.apache.hc.core5.http.Header;
+import org.apache.hc.core5.http.HttpHost;
+import org.apache.hc.core5.http.io.entity.EntityUtils;
+
+import org.apache.hc.core5.http.protocol.HttpContext;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 import org.json.simple.parser.ParseException;
 import tasks.runnables.RequestResultsUpdateRunnable;
 
+import javax.net.ssl.HostnameVerifier;
+import javax.net.ssl.SSLContext;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
+import java.net.InetAddress;
 import java.net.NetworkInterface;
+import java.net.ProtocolException;
 import java.net.UnknownHostException;
+import java.security.NoSuchAlgorithmException;
 import java.util.Map;
 import java.util.Set;
 
@@ -39,8 +56,8 @@ import java.util.Set;
  */
 public class DNSOverHTTPSTask extends DNSTaskBase {
 
-    private boolean cdFlag;
-    private boolean isGet;
+    private final boolean cdFlag;
+    private final boolean isGet;
     private String serverDomainName;
     public DNSOverHTTPSTask(boolean recursion, boolean adFlag, boolean cdFlag, boolean doFlag, String domain,
                             Q_COUNT[] types, TRANSPORT_PROTOCOL transport_protocol,
@@ -66,8 +83,7 @@ public class DNSOverHTTPSTask extends DNSTaskBase {
      * Body of method taken from Martin Biolek thesis and modified
      * */
     @Override
-    protected void sendData() throws TimeoutException, MessageTooBigForUDPException, InterfaceDoesNotHaveIPAddressException, IOException, InterruptedException, ParseException, HttpCodeException, OtherHttpException, NotValidDomainNameException, NotValidIPException, QueryIdNotMatchException {
-        //try {
+    protected void sendData() throws TimeoutException, MessageTooBigForUDPException, InterfaceDoesNotHaveIPAddressException, IOException, InterruptedException, ParseException, HttpCodeException, OtherHttpException, NotValidDomainNameException, NotValidIPException, QueryIdNotMatchException, ProtocolException, NoSuchAlgorithmException {
            String httpsDomain = resolver.split("/")[0];
             //String httpsDomain = serverDomainName.split("/")[0];
             CloseableHttpResponse response;
@@ -75,40 +91,34 @@ public class DNSOverHTTPSTask extends DNSTaskBase {
 
             setMessagesSent(1);
 
-            String uri = addParamtoUris(resolver, httpRequestParamsName, values);
-            //String uri = addParamtoUris(serverDomainName, httpRequestParamsName, values);
+            String uri = addParamToUri(resolver, httpRequestParamsName, values);
+            //String uri = addParamToUris(serverDomainName, httpRequestParamsName, values);
             updateProgressUI();
 
             response = sendAndReceiveDoH(uri, httpsDomain, isGet);
             setDuration(calculateDuration());
-            if (response.getStatusLine().getStatusCode() == 200) {
-                String content = EntityUtils.toString(response.getEntity());
-                JSONParser parser = new JSONParser();
-                this.httpResponse = (JSONObject) parser.parse(content);
-                byteSizeResponseDoHDecompresed = getAllHeadersSize(response.getAllHeaders());
-                byteSizeResponseDoHDecompresed += content.getBytes().length;
-                parseResponseDoh(content);
+            if (response.getCode() == 200) {
+                try
+                {
+                    String content = EntityUtils.toString(response.getEntity());
+                    JSONParser parser = new JSONParser();
+                    this.httpResponse = (JSONObject) parser.parse(content);
+                    byteSizeResponseDoHDecompresed = getAllHeadersSize(response.getHeaders());
+                    byteSizeResponseDoHDecompresed += content.getBytes().length;
+                    parseResponseDoh(content);
+                }
+                catch (org.apache.hc.core5.http.ParseException e)
+                {
+                    // Had to do this using try-catch, because this method already throws ParseException, but from JSON
+                    throw new ProtocolException("Parsing error in response");
+                }
             } else {
-                throw new HttpCodeException(response.getStatusLine().getStatusCode());
+                throw new HttpCodeException(response.getCode());
             }
             closeHttpConnection();
             if(!massTesting){
                 Platform.runLater(() -> controller.getSendButton().setText(controller.getButtonText()));
             }
-        /*} catch (HttpCodeException | ParseException | InterfaceDoesNotHaveIPAddressException | SocketException
-                | SSLPeerUnverifiedException | InterruptedIOException e) {
-            exc = e;
-            closeHttpConnection();
-            e.printStackTrace();
-            Platform.runLater(new StopProgressBar(this, e.getClass().getSimpleName()));
-            throw e;
-        } catch (Exception e) {
-            exc = e;
-            closeHttpConnection();
-            e.printStackTrace();
-            Platform.runLater(new StopProgressBar(this, "Exception"));
-            throw new OtherHttpException();
-        }*/
     }
 
     @Override
@@ -145,9 +155,8 @@ public class DNSOverHTTPSTask extends DNSTaskBase {
     @SuppressWarnings("unchecked")
     protected static TreeItem<String> parseJSON(String name, Object json) {
         TreeItem<String> item = new TreeItem<>();
-        if (json instanceof JSONObject) {
+        if (json instanceof JSONObject object) {
             item.setValue(name);
-            JSONObject object = (JSONObject) json;
             ((Set<Map.Entry>) object.entrySet()).forEach(entry -> {
                 String childName = (String) entry.getKey();
                 Object childJson = entry.getValue();
@@ -172,25 +181,32 @@ public class DNSOverHTTPSTask extends DNSTaskBase {
     /*
      * Body of method taken from Martin Biolek thesis
      * */
-    private String addParamtoUris(String uri, String[] paramNames, String[] values) {
+    private String addParamToUri(String uri, String[] paramNames, String[] values) {
 
-        String splited[] = uri.split("/");
-        if (Ip.isIpv6Address(splited[0])) {
+        String[] split = uri.split("/");
+        if (Ip.isIpv6Address(split[0])) {
 
-            uri = "[" + splited[0] + "]";
-            if (splited.length > 1) {
-                uri += "/" + splited[1];
+            uri = "[" + split[0] + "]";
+            if (split.length > 1) {
+                uri += "/" + split[1];
             }
         }
-        String result = "https://" + uri + "?";
+        //String result = "https://" + uri + "?";
+        StringBuilder result = new StringBuilder("https://")
+                .append(uri)
+                .append("?");
         for (int i = 0; i < values.length; i++) {
             if (i == 0) {
-                result += paramNames[i] + "=" + values[i];
+                result.append(paramNames[i])
+                        .append("=")
+                        .append(values[i]);
             } else {
-                result += "&" + paramNames[i] + "=" + values[i];
+                result.append("&")
+                        .append(paramNames[i])
+                        .append(values[i]);
             }
         }
-        return result;
+        return result.toString();
 
     }
 
@@ -198,23 +214,25 @@ public class DNSOverHTTPSTask extends DNSTaskBase {
      * Body of method taken from Martin Biolek thesis and modified
      * */
     private String qcountAsString() {
-        String result = "";
+        // String result = "";
+        StringBuilder result = new StringBuilder();
         for (int i = 0; i < qcountTypes.length; i++) {
             if (i == 0) {
-                result += qcountTypes[i];
+                result.append(qcountTypes[i]);
             } else {
-                result += "," + qcountTypes[i];
+                result.append(",")
+                        .append(qcountTypes[i]);
             }
         }
-        return result;
+        return result.toString();
     }
 
     /*
      * Body of method taken from Martin Biolek thesis and modified to use directly IP instead of domain name of DNS server
      * */
     private CloseableHttpResponse sendAndReceiveDoH(String uri, String host, boolean httpGet)
-            throws ClientProtocolException, IOException, InterfaceDoesNotHaveIPAddressException {
-        HttpRequestBase request;
+            throws ClientProtocolException, IOException, InterfaceDoesNotHaveIPAddressException, NoSuchAlgorithmException {
+        HttpUriRequestBase request;
         if (httpGet) {
             request = new HttpGet(uri);
 
@@ -224,13 +242,29 @@ public class DNSOverHTTPSTask extends DNSTaskBase {
         request.addHeader("Accept", "application/dns-json");
         request.addHeader("Accept-Encoding", "gzip, deflate, br");
         request.addHeader("User-Agent", "Client-DNS");
+
+        request.addHeader("Host", host);
         // host header omitted when using IP instead of domain
         if (!Ip.isIpValid(host)) {
             request.addHeader("Host", host);
         }
-        request.setConfig(getRequestConfig(host));
+
+        InetAddress localAddr = null;
+        try {
+            if (Ip.isIpValid(host)) {
+                localAddr = Ip.getIpAddressFromInterface(interfaceToSend, host);
+            } else if (interfaceToSend != null && !interfaceToSend.getInterfaceAddresses().isEmpty()) {
+                localAddr = interfaceToSend.getInterfaceAddresses().getFirst().getAddress();
+            }
+        } catch (Exception e) {
+            LOGGER.severe(ExceptionUtils.getStackTrace(e));
+            throw new InterfaceDoesNotHaveIPAddressException();
+        }
+
+        //request.setConfig(getRequestConfig(host));
         httpRequestAsString(request);
-        httpClient = HttpClients.createDefault();
+        //httpClient = HttpClients.createDefault();
+        httpClient = createHttpClientForIP(resolver.split("/")[0], serverDomainName, localAddr);
         startTime = System.nanoTime();
         CloseableHttpResponse response = httpClient.execute(request);
         stopTime = System.nanoTime();
@@ -243,40 +277,42 @@ public class DNSOverHTTPSTask extends DNSTaskBase {
     /*
      * Body of method taken from Martin Biolek thesis
      * */
+    /*
     private RequestConfig getRequestConfig(String host) throws InterfaceDoesNotHaveIPAddressException {
         try {
             if (Ip.isIpValid(host)) {
                 return RequestConfig.custom().setLocalAddress(Ip.getIpAddressFromInterface(interfaceToSend, host))
                         .build();
             }
-            return RequestConfig.custom().setLocalAddress(interfaceToSend.getInterfaceAddresses().get(0).getAddress())
+            return RequestConfig.custom().setLocalAddress(interfaceToSend.getInterfaceAddresses().getFirst().getAddress())
                     .build();
         } catch (Exception e) {
-            //e.printStackTrace();
             LOGGER.severe(ExceptionUtils.getStackTrace(e));
             throw new InterfaceDoesNotHaveIPAddressException();
         }
     }
-
+    */
     /*
      * Body of method taken from Martin Biolek thesis
      * */
-    private void httpRequestAsString(HttpRequestBase request) {
-        String result = request.toString() + "\n";
-        for (org.apache.http.Header httpHeader : request.getAllHeaders()) {
-            result += httpHeader.toString() + "\n";
+    private void httpRequestAsString(HttpUriRequestBase request) {
+        StringBuilder result = new StringBuilder(request.toString());
+        result.append("\n");
+        for (Header httpHeader : request.getHeaders()) {
+            result.append(httpHeader.toString())
+                    .append("\n");
         }
-        this.byteSizeQuery = result.getBytes().length;
+        this.byteSizeQuery = result.toString().getBytes().length;
         setByteSizeQuery(byteSizeQuery);
-        httpRequest = result;
+        httpRequest = result.toString();
     }
 
     /*
      * Body of method taken from Martin Biolek thesis
      * */
-    private int getAllHeadersSize(org.apache.http.Header[] allHeaders) {
+    private int getAllHeadersSize(Header[] allHeaders) {
         int size = 0;
-        for (org.apache.http.Header header : allHeaders) {
+        for (Header header : allHeaders) {
             size += header.toString().getBytes().length;
         }
         return size + 1;
@@ -289,8 +325,8 @@ public class DNSOverHTTPSTask extends DNSTaskBase {
         try {
             httpClient.close();
         } catch (Exception e) {
-            // already closed, just return
-            return;
+            // already closed, just log it
+            LOGGER.info("Trying to close already closed connection");
         }
     }
 
@@ -300,5 +336,44 @@ public class DNSOverHTTPSTask extends DNSTaskBase {
     private void parseResponseDoh(String response) throws ParseException {
         JSONParser parser = new JSONParser();
         this.httpResponse = (JSONObject) parser.parse(response);
+    }
+    // 240979: When accessing HTTPS using IP address, ssl will probably fail, so this is meant to check and create SSL to be used in HTTPS
+    private CloseableHttpClient createHttpClientForIP(String ipAddress, String expectedHostname, InetAddress localAddress) throws NoSuchAlgorithmException {
+        try {
+            // https://docs.oracle.com/javase/7/docs/api/javax/net/ssl/HostnameVerifier.html
+            HostnameVerifier hostnameVerifier = (hostname, session) -> {
+                // IPv4 is plain, IPv6 can be surrounded by brackets "[::]"
+                if (hostname.equals(ipAddress) || hostname.equals("[" + ipAddress + "]")) {
+                    // Use the default verifier but with the expected hostname
+                    return new DefaultHostnameVerifier().verify(expectedHostname, session);
+                }
+                // For other cases, use default verification
+                return new DefaultHostnameVerifier().verify(hostname, session);
+            };
+
+            DefaultClientTlsStrategy tlsStrategy = new DefaultClientTlsStrategy(
+                    SSLContext.getDefault(),
+                    hostnameVerifier
+            );
+
+            // Create connection manager with TLS strategy
+            PoolingHttpClientConnectionManager connectionManager =
+                    PoolingHttpClientConnectionManagerBuilder.create()
+                            .setTlsSocketStrategy(tlsStrategy)
+                            .build();
+
+            return HttpClients.custom()
+                    .setConnectionManager(connectionManager)
+                    .setRoutePlanner(new DefaultRoutePlanner(null) {
+                        @Override
+                        protected InetAddress determineLocalAddress(HttpHost firstHop, HttpContext context) {
+                            return localAddress;
+                        }
+                    })
+                    .build();
+        } catch (Exception e) {
+            LOGGER.severe("Failed to create custom HTTP client: " + ExceptionUtils.getStackTrace(e));
+            return HttpClients.createDefault();
+        }
     }
 }
